# rust-leetcode

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/code_2024_06/: distribute_candies.rs  lru.rs  mod.rs  next_greater_elements.rs  smallest_string.rs  sum_of_the_digits_of_harshad_number.rs
src/code_2024_07/: accounts_merge.rs  cal_points.rs  en_demo.rs  get_good_indices.rs  min_rectangles_to_cover_points.rs  mod.rs  modified_matrix.rs  observer.rs  pivot_index.rs
src/code_2024_09/: clear_digits.rs  contains_nearby_duplicate.rs  max_consecutive_answers.rs  max_score_sightseeing_pair.rs  max_strength.rs  mod.rs  remove_stars.rs  satisfies_conditions.rs
src/code_2025/: code_202508.rs  mod.rs
src/design_patterns/: decorator.rs  interpret.rs  mod.rs
src/difficult/: frog_position.rs  min_number_of_semesters.rs  mod.rs  trap.rs
src/do_any/: dyn_animal.rs  generic.rs  life.rs  mod.rs
src/dynamic/: fib.rs  mod.rs  rob.rs  tribonacci.rs
src/hello_alg/: backtracking.rs  mod.rs  n_queens.rs  permutations_i.rs  subset.rs
src/medium/: all_possible_fbt.rs  base_neg2.rs  compute_area.rs  divisibility_array.rs  find_ladders.rs  frequency_tracker.rs  max_array_value.rs  maximal_square.rs  maximum_even_split.rs  mct_from_leaf_values.rs  minimum_removal.rs  mod.rs  my_pow.rs  num_of_minutes.rs  num_tile_possibilities.rs  num_times_all_blue.rs  pond_sizes.rs  remove_kdigits.rs  rob.rs  snapshot_array.rs  vowel_strings.rs  watering_plants.rs
src/programming/: chap9.rs  mod.rs  refd.rs
src/simple/: _match.rs  average_value.rs  climb_stairs.rs  count_points.rs  (+20 more)
(+25 files in other folders)
